correct overflow'

--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@
     -webkit-font-smoothing: antialiased;
   }
 
+  html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
   img, picture, video, canvas, svg {
     display: block;
     max-width: 100%;
@@ -111,20 +117,25 @@
   .content-box{
     display: flex;
     position: relative;
-    height: 76vh;
-    top: 24vh;
+    height: 100%;
+    width: 100%;
     justify-content: center;
     background-color: #71717a;
     z-index: 1;
   }
 
   #book-area{
+    position: relative;
     display: grid;
-    height: 76vh;
-    width: 60vw;
+    height: 100%;
+    width: 62vw;
+    justify-content: center;
     grid-template-columns: 15vw 15vw 15vw 15vw;
+    grid-template-rows: repeat(auto-fill, 40vh);
     background-color: #a1a1aa;
     box-shadow: 0rem 0rem 2rem black;
+    overflow-y: auto;
+    overflow-x: hidden;
   }
 
   /*addBook*/
@@ -134,7 +145,7 @@
     top: 0;
     display: flex;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.4);
     align-items: center;
     justify-content: center;
@@ -223,6 +234,7 @@
     display: flex;
     position: relative;
     flex-direction: column;
+    top: 24vh;
     margin: 1rem;
     height: 35vh;
     justify-content: center;
